RESOLVED FIXED 243819
webgl/2.0.y/deqp/functional/gles3/negativetextureapi.html assertion failure
https://bugs.webkit.org/show_bug.cgi?id=243819
Summary webgl/2.0.y/deqp/functional/gles3/negativetextureapi.html assertion failure
Kimmo Kinnunen
Reported 2022-08-11 03:55:53 PDT
webgl/2.0.y/deqp/functional/gles3/negativetextureapi.html assertion failure The validation is not run when pixels == nullptr Due to bug 242614
Attachments
Kimmo Kinnunen
Comment 1 2022-08-11 03:57:30 PDT
Kimmo Kinnunen
Comment 2 2022-08-11 03:58:21 PDT
The issue is that validation is not done when user passes pixels=null, where as the teximage3dbase expect that the validation is done. WebGL defines pixels=null means pixels=sufficiently large 0 filled pixels. The philosophical rabbit hole: Current WebGL implementation naturally "optimizes" so that it doesn't create the sufficiently large 0 filled pixels buffer, rather that it just passes pixels=nullptr down. However, it also validates other arguments based on pixels. The validation shoudn't be done this way, it should be done based on the GL type, since pixels isn't always there. The other philosophical rabbit hole: the ASSERT_UNUSED(ok) is the smell that reveals the bug. Instead, the validation should return the computed properties, if the validation passes. This way the computation is done once
Dan Glastonbury
Comment 3 2022-08-12 03:04:39 PDT
EWS
Comment 4 2022-08-17 17:11:59 PDT
Committed 253543@main (592cd219941f): <https://commits.webkit.org/253543@main> Reviewed commits have been landed. Closing PR #3263 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.