[WebGL] Calculate correct image transfer size from ArrayBufferView https://bugs.webkit.org/show_bug.cgi?id=243819 rdar://98347913

Reviewed by Kimmo Kinnunen.

Validation was being skipped when pixels was null, which is an optimization
instead of passing a sufficiently large array of all zeroes. Remove the two step
approach to calculating the required bytes and instead return the value from
`validateTexFuncData()` and pass this size to base helper functions.

* LayoutTests/TestExpectations: Enable failing test.
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::texImageSourceHelper):
Unify passing image data span as GCGLSpan<> instead of as separate base ptr +
length.
(WebCore::WebGLRenderingContextBase::computeImageSizeInBytes): Deleted.
(WebCore::WebGLRenderingContextBase::texImageArrayBufferViewHelper):
Unify passing validated image data span as GCGLSpan<> instead of as separate
base ptr + length. Adjustment due to srcOffset moved to validateTexFuncData.
(WebCore::WebGLRenderingContextBase::texImageImpl):
Unify passing image data span as GCGLSpan<> instead of as separate base ptr +
length.
(WebCore::WebGLRenderingContextBase::texImage2DBase):
When using ANGLE, remove extra image size checks as this is handled in
validateTexFuncData.
(WebCore::WebGLRenderingContextBase::texImage3DBase): Deleted
(WebCore::WebGLRenderingContextBase::texSubImage2DBase):
When using ANGLE, remove extra image size checks as this is handled in
validateTexFuncData.
(WebCore::WebGLRenderingContextBase::texSubImage3DBase): Deleted
(WebCore::WebGLRenderingContextBase::validateTexFuncData):
Consolidate calculation of image byte size and don't skip required checks if
pixels is null. Returns validated span of the data that will be read by texture
specification functions.
* Source/WebCore/html/canvas/WebGLRenderingContextBase.h:
- Remove unneeded texImage helper functions
- Change validateTexFuncData to return optional validated span of image bytes
* Source/WebCore/platform/graphics/GraphicsContextGL.cpp:
* Source/WebCore/platform/graphics/GrpahicsContextGL.h:
(WebCore::GraphicsContextGL::extractTextureData):
Change pixels to span of pixels instead of ptr.

Canonical link: https://commits.webkit.org/253543@main